Implementación del Header

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-
+    <header class="cabecera">
+       <div class="cabecera__items">
+         <img class="cabecera__logo" src="img/logoAlauraGeek.png" alt="Logo">
+         <h1 class="cabecera__titulo">AluraGeek</h1>
+       </div>
     </header>
     <main>
-
+        <section>
+            
+        </section>
     </main>
     <footer>
-
     </footer>
-    
 </body>
 </html>
