Implementación de sección Añadir productos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
        </div>
     </header>
     <main>
-        <section>
+        <section class="productos-agregar">
+            <h2 class="productos-agregar__titulo">AGREGAR PRODUCTO:</h2>
+            <form class="productos-agregar__formulario">
+                <input class="productos-agregar__campo" type="text" placeholder="nombre...">
+                <input class="productos-agregar__campo" type="text" placeholder="precio...">
+                <input class="productos-agregar__campo" type="text" placeholder="imagen...">
+                <div class="productos-agregar__botones">
+                    <button class="productos-agregar__boton productos-agregar__enviar">Enviar</button>
+                    <button class="productos-agregar__boton productos-agregar__limpiar">Limpiar</button>
+                </div>
+            </form>
+        </section>
+        <section class="productos">
             
         </section>
     </main>
