Implementación de mis productos y footer

--- a/index.html
+++ b/index.html
@@ -28,10 +28,101 @@
             </form>
         </section>
         <section class="productos">
-            
+            <h2 class="productos__titulo">MIS PRODUCTOS</h2>
+            <div class="productos__list">
+                <div class="productos__card">
+                    <img src="./img/producto1.png" class="productos__img" />
+                    <div class="card-container--info">
+                        <p class="producto__nombre">Nombre</p>
+                        <div class="card-container--value">
+                            <p class="producto__precio">$ 00.00</p>
+                            <img src="./img/trash_icon.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="productos__card">
+                    <img src="./img/producto1.png" class="productos__img" />
+                    <div class="card-container--info">
+                        <p class="producto__nombre">Nombre</p>
+                        <div class="card-container--value">
+                            <p class="producto__precio">$ 00.00</p>
+                            <img src="./img/trash_icon.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="productos__card">
+                    <img src="./img/producto1.png" class="productos__img" />
+                    <div class="card-container--info">
+                        <p class="producto__nombre">Nombre</p>
+                        <div class="card-container--value">
+                            <p class="producto__precio">$ 00.00</p>
+                            <img src="./img/trash_icon.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="productos__card">
+                    <img src="./img/producto1.png" class="productos__img" />
+                    <div class="card-container--info">
+                        <p class="producto__nombre">Nombre</p>
+                        <div class="card-container--value">
+                            <p class="producto__precio">$ 00.00</p>
+                            <img src="./img/trash_icon.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="productos__card">
+                    <img src="./img/producto1.png" class="productos__img" />
+                    <div class="card-container--info">
+                        <p class="producto__nombre">Nombre</p>
+                        <div class="card-container--value">
+                            <p class="producto__precio">$ 00.00</p>
+                            <img src="./img/trash_icon.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="productos__card">
+                    <img src="./img/producto1.png" class="productos__img" />
+                    <div class="card-container--info">
+                        <p class="producto__nombre">Nombre</p>
+                        <div class="card-container--value">
+                            <p class="producto__precio">$ 00.00</p>
+                            <img src="./img/trash_icon.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="productos__card">
+                    <img src="./img/producto1.png" class="productos__img" />
+                    <div class="card-container--info">
+                        <p class="producto__nombre">Nombre</p>
+                        <div class="card-container--value">
+                            <p class="producto__precio">$ 00.00</p>
+                            <img src="./img/trash_icon.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="productos__card">
+                    <img src="./img/producto1.png" class="productos__img" />
+                    <div class="card-container--info">
+                        <p class="producto__nombre">Nombre</p>
+                        <div class="card-container--value">
+                            <p class="producto__precio">$ 00.00</p>
+                            <img src="./img/trash_icon.png" />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footer__contenedor__logo">
+            <img class="footer__logo" src="img/logoAlauraGeek.png" alt="Logo">
+            <h1 class="footer__titulo">AluraGeek</h1>
+        </div>
+        <div class="footer__creditos">
+            <p class="footer__texto">Desarollado por José Luis De la Cruz Iñigo</p>
+            <p class="footer__texto">ALURA LATAM - 2025</p>
+        </div>
+
     </footer>
 </body>
 </html>
